--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<style>
 		body {
 			font-family: 'IBM Plex Sans', sans-serif;
-			background-color: #447a7f;
+			background-color: rgb(43, 95, 100);
 			color: #ffffff;
 			font-weight: 100;
 			font-style: italic;
@@ -40,7 +40,6 @@
 			font-size: 4vw;
 			margin-bottom: 2vw;
 			list-style-type: circle;
-			padding-left: 1vw;
 			}
 	
 		section{
@@ -49,20 +48,19 @@
 	
 		section.loves{
 			margin: 5vw;
-			border-radius: 10px;
 			padding: 1vw 5vw 5vw 5vw; 
-			border: 1px solid #bababa;
+			border: 1px solid rgba(236, 236, 236, 0.165);
 			}
 	</style>
 	<body>
 		<section>
 		<h1>Hello.</h1>
-		<p>I'm Steve Quilala.</p><p>I'm currently a Web Designer / Developer at UBC Okanagan in Kelowna, BC, Canada </p>
-		<p>Award-winning designer who can code. Cyclist. MBA dropout. Apple fanboy. 1v1 Platinum league StarCraft II Zerg. Cat person.</p>
+		<p>I'm Steve Quilala, a Web Designer / Developer based in Vancouver, Canada. </p>
+		<p>MBA graduate. Apple fanboy. Endurance cyclist. Diamond league StarCraft II Zerg. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com">stevequilala.wordpress.com</a></p>
 		</section>
 		<section class="loves">
-		<h2>I AM ALL ABOUT...</h2>
+		<h2>What I love...</h2>
 		<ul>
 			<li>Making new things</li>
 			<li>Improving and refining existing things</li>
@@ -71,22 +69,23 @@
 			<li>Education, teaching, and learning</li>
 			<li>Super smart people who are also super kind and loving</li>
 			<li>Great teamwork when everyone is in-sync and working together as one</li>
-			<li>Apple stuff</li>
-			<li>New York City</li>
+			<li>Honesty</li>
+			<li>Transparency</li>
 			<li>Doing work that's fun and rewarding</li>
-			<li>Soft, medium length cardigans preferably with pockets</li>
-			<li>NASA and space research</li>			
 			<li>Good friends and family</li>
 			<li>Unselfish, virtuous, generous, good people</li>
-			<li>YouTube</li>
+			<li>Well thought-out, creative branding</li>
+			<li>Complex people who are super misunderstood, but are actually really good inside</li>
+			<li>Apple stuff</li>
+			<li>New York City</li>			<li>YouTube</li>
 			<li>Sinigang</li>
 			<li>Sushi</li>
 			<li>Fried chicken and gravy</li>
-			<li>Uni Sashimi</li>
+			<li>Uni sashimi</li>
 			<li>Pizza</li>
 			<li>Pho</li>
+			<li>Soft, medium length cardigans preferably with pockets</li>
 			<li>Perfect sunny side up fried eggs</li>
-			<li>Beef brisket and wonton egg noodle soup</li>
 			<li>Hot wings</li>
 			<li>Researching companies and investing in them</li>
 			<li>Learning about laws and legal precedents</li>
@@ -95,13 +94,14 @@
 			<li>Steve Jobs</li>
 			<li>CSS</li>
 			<li>Gardening</li>
+			<li>Beef brisket and wonton egg noodle soup</li>
 			<li>Hamilton</li>
 			<li>Les Miserables</li>
 			<li>Barack Obama speeches</li>
 			<li>30 Rock</li>
 			<li>Community</li>
 			<li>Brooklyn 99</li>
-			<li>The 12 inch MacBook</li>
+			<li>The 12-inch MacBook</li>
 			<li>The cylinder Mac Pro</li>
 			<li>The desk lamp iMac</li>
 			<li>Dyson Vacuums</li>
@@ -114,8 +114,8 @@
 			<li>Snow. Tons of snow.</li>
 			<li>NBA Basketball</li>
 			<li>Charles Barkley</li>
-			<li>San Francisco</li>
-			<li>London</li>			
+			<li>San Francisco, California</li>
+			<li>London, England</li>			
 			<li>Long drives</li>
 			<li>Long bike rides</li>
 			<li>Playing ball hockey outside with friends for hours</li>
@@ -138,6 +138,7 @@
 			<li>Airports</li>
 			<li>SPAM</li>
 			<li>Wild 'N Out</li>
+			<li>Jollibee</li>
 			<li>Nike Free Run shoes</li>
 			<li>Black skinny jeans</li>
 			<li>Good quality leather</li>
@@ -149,12 +150,12 @@
 			<li>Victoria, BC</li>
 			<li>Long hot showers</li>
 			<li>Pepsi</li>
-			<li>Complex people who are super misunderstood, but are actually really good inside</li>
 			<li>Jeep Renegades</li>
 			<li>Mazda Miatas</li>
 			<li>Brene Brown</li>
 			<li>MEC</li>
-			<li>Road bikes</li>
+			<li>NASA and space research</li>			
+			<li>Fairdale road bikes</li>
 			<li>Reading/watching Bloomberg news</li>
 			<li>The feeling of a good feeble grind or barspin on a BMX</li>
 			<li>Haribo gummy cherries</li>
@@ -169,11 +170,12 @@
 			<li>Grilled Squid</li>
 			<li>Grilled Mackarel</li>
 			<li>Kare-Kare</li>
-			<li>Cervelo</li>
+			<li>Cervelo bikes</li>
 			<li>Mizuno irons</li>
 			<li>Car camping</li>
 			<li>Steak</li>
-			<li>Billy Miner Pie</li>
+			<li>The Keg Billy Miner Pie</li>
+			<li>Negitoro Cones</li>
 		</ul>
 		</section>
 	</body>
