--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	
 		p {
 			font-size: 4.5vw;
+			line-height: 1.4;
 			}
 		
 		a {
@@ -38,6 +39,7 @@
 		
 		li {
 			font-size: 4vw;
+			line-height: 1.3;
 			margin-bottom: 2vw;
 			list-style-type: circle;
 			}
@@ -55,7 +57,7 @@
 	<body>
 		<section>
 		<h1>Hello.</h1>
-		<p>I'm Steve Quilala, a Web Designer / Developer based in Vancouver, Canada. </p>
+		<p>I'm Steve Quilala, a front-end web designer/developer based in Vancouver, Canada. </p>
 		<p>MBA graduate. Apple fanboy. Endurance cyclist. Diamond league StarCraft II Zerg. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com">stevequilala.wordpress.com</a></p>
 		</section>
@@ -89,10 +91,12 @@
 			<li>Hot wings</li>
 			<li>Researching companies and investing in them</li>
 			<li>Learning about laws and legal precedents</li>
+			<li>Purposeful, well-designed things in general</li>
 			<li>Okanagan weather</li>
 			<li>Muhammad Ali</li>
 			<li>Steve Jobs</li>
 			<li>CSS</li>
+			<li>NewTown Bakery</li>
 			<li>Gardening</li>
 			<li>Beef brisket and wonton egg noodle soup</li>
 			<li>Hamilton</li>
@@ -105,7 +109,6 @@
 			<li>The cylinder Mac Pro</li>
 			<li>The desk lamp iMac</li>
 			<li>Dyson Vacuums</li>
-			<li>Well-designed, thoughtfully crafted things in general</li>
 			<li>Podcasts</li>
 			<li>Oprah Supersoul Conversations</li>
 			<li>Documentaries</li>
@@ -167,15 +170,18 @@
 			<li>Quentin Tarantino movies</li>
 			<li>Three Idiots</li>
 			<li>Mythic Quest</li>
-			<li>Grilled Squid</li>
+			<li>Grilled Squid at Richmond Night Market</li>
 			<li>Grilled Mackarel</li>
 			<li>Kare-Kare</li>
 			<li>Cervelo bikes</li>
-			<li>Mizuno irons</li>
+			<li>Mizuno golf irons</li>
 			<li>Car camping</li>
-			<li>Steak</li>
+			<li>Prime Rib and Ribeye Steaks</li>
 			<li>The Keg Billy Miner Pie</li>
 			<li>Negitoro Cones</li>
+			<li>Shohei Ohtani</li>
+			<li>Chipotle</li>
+			<li>Chinatown BBQ</li>
 		</ul>
 		</section>
 	</body>
