Readd very light border

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		section.loves{
 			margin: 5vw;
 			padding: 1vw 5vw 5vw 5vw; 
+			border: 1px solid rgba(255, 255, 255, 0.1);
 			}
 	</style>
 	<body>
