Update title, fonts, minor styling

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>STEVE QUILALA DOT COM</title>
+		<title>Hi. I'm Steve Quilala.</title>
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 	</head>
 	<style>
@@ -21,19 +21,19 @@
 			}	
 		
 		h2 {
-			font-size: 5vw;
+			font-size: 6vw;
 			font-weight: 100;
 			}
 	
 		p {
-			font-size: 4.5vw;
+			font-size: 5vw;
 			line-height: 1.4;
 			}
 		
 		a {
 			color: #ffffff;
 			text-decoration: none;
-			border-bottom: .2vw dashed #fff;
+			border-bottom: 2px dotted #fff;
 			padding-bottom: .5vw;
 			}	
 		
@@ -56,7 +56,7 @@
 	</style>
 	<body>
 		<section>
-		<h1>Hello.</h1>
+		<h1>Hi there.</h1>
 		<p>I'm Steve Quilala, a front-end web designer/developer based in Vancouver, Canada. </p>
 		<p>MBA graduate. Apple fanboy. Endurance cyclist. Diamond league StarCraft II Zerg. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com">stevequilala.wordpress.com</a></p>
