--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	</style>
 	<body>
 		<section>
-		<h1>Hi there.</h1>
+		<h1>Hello!</h1>
 		<p>I'm Steve Quilala, a front-end web designer/developer based in Vancouver, Canada. </p>
 		<p>MBA graduate. Apple fanboy. Endurance cyclist. Diamond league StarCraft II Zerg. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com">stevequilala.wordpress.com</a></p>
