Updates to intro

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 	</style>
 	<body>
 		<section>
-		<h1>Hello!</h1>
-		<p>I'm Steve Quilala, a front-end web designer/developer based in Vancouver, Canada. </p>
-		<p>MBA graduate. Apple fanboy. Endurance cyclist. Diamond league StarCraft II Zerg. Cat person.</p>
+		<h1>Hi.</h1>
+		<p>I'm Steve Quilala, a front-end web designer based in Vancouver, BC, Canada. </p>
+		<p>MBA graduate. Apple fanboy. Creative/technical unicorn. StarCraft II Diamond league Zerg. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com">stevequilala.wordpress.com</a></p>
 		</section>
 		<section class="loves">
@@ -136,6 +136,7 @@
 			<li>Baseball caps</li>
 			<li>Hanging out at shopping malls</li>
 			<li>Hard-working, gritty, grinder types of players in any sport</li>
+			<li>WordPress</li>			
 			<li>Kittens</li>			
 			<li>Steel road bikes</li>			
 			<li>Airports</li>
