--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<body>
 		<section>
 		<h1>Hello.</h1>
-		<p>I'm Steve Quilala, a front-end web designer based in Vancouver, BC, Canada. </p>
+		<p>I'm Steve Quilala, a web designer based in Vancouver, BC, Canada. </p>
 		<p>MBA graduate. Apple fanboy. Creative/technical unicorn. StarCraft II Diamond league Zerg. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com">stevequilala.wordpress.com</a></p>
 		</section>
