--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
 			font-family: 'IBM Plex Sans', sans-serif;
 			background-color: rgb(43, 95, 100);
 			color: #ffffff;
-			font-weight: 100;
 			font-style: italic;
-			line-height: 1.25;
-	/* 		font-family: 'IBM Plex Mono', monospace; */
 			}
 		
 		h1 {
-			font-size: 24vw;
+			font-size: 25vw;
 			margin-bottom: 2vw;
 			font-weight: 100;
 			}	
@@ -26,22 +23,17 @@
 			}
 	
 		p {
-			font-size: 5vw;
+			font-size: 6vw;
 			line-height: 1.4;
+			font-weight: 100;
 			}
 		
-		a {
-			color: #ffffff;
-			text-decoration: none;
-			border-bottom: 2px dotted #fff;
-			padding-bottom: .5vw;
-			}	
-		
 		li {
-			font-size: 4vw;
+			font-size: 5vw;
 			line-height: 1.3;
-			margin-bottom: 3vw;
+			margin-bottom: 2.5vw;
 			list-style-type: circle;
+			font-weight: 100;
 			}
 	
 		section{
@@ -53,11 +45,18 @@
 			padding: 1vw 5vw 5vw 5vw; 
 			border: 1px solid rgba(255, 255, 255, 0.1);
 			}
+
+		a {
+			color: #ffffff;
+			text-decoration: none;
+			border-bottom: 2px dotted #fff;
+			padding-bottom: .5vw;
+			}				
 	</style>
 	<body>
 		<section>
 		<h1>Hello.</h1>
-		<p>I'm Steve Quilala, I'm a front-end web developer based in Vancouver, BC, Canada. </p>
+		<p>I'm Steve Quilala, a front-end web developer based in Vancouver. </p>
 		<p>MBA graduate. Apple fanboy. Creative/technical unicorn. StarCraft II Diamond league Zerg. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com">stevequilala.wordpress.com</a></p>
 		</section>
