--- a/index.html
+++ b/index.html
@@ -18,40 +18,40 @@
 			}	
 		
 		h2 {
-			font-size: 6vw;
+			font-size: 6.5vw;
 			font-weight: 100;
 			}
 	
 		p {
-			font-size: 6vw;
+			font-size: 6.5vw;
 			line-height: 1.4;
 			font-weight: 100;
 			}
 		
 		li {
-			font-size: 5vw;
+			font-size: 6vw;
 			line-height: 1.3;
 			margin-bottom: 2.5vw;
 			list-style-type: circle;
 			font-weight: 100;
 			}
 	
-		section{
-			padding: 1vw 5vw;
-			}
-	
-		section.loves{
-			margin: 5vw;
-			padding: 1vw 5vw 5vw 5vw; 
-			border: 1px solid rgba(255, 255, 255, 0.1);
-			}
-
 		a {
 			color: #ffffff;
 			text-decoration: none;
 			border-bottom: 2px dotted #fff;
 			padding-bottom: .5vw;
 			}				
+	
+		section{
+			padding: 1vw 0;
+			margin: 5vw;
+			}
+	
+		section.loves{
+			padding: 1vw 5vw 5vw 5vw; 
+			border: 1px solid rgba(255, 255, 255, 0.3);
+			}
 	</style>
 	<body>
 		<section>
