--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 			<li>Lord of the Rings</li>
 			<li>Hardwood floors</li>
 			<li>Shopping at IKEA</li>
-			<li>Arby's beef and cheddar</li>
+			<li>Arby's double beef and cheddars</li>
 			<li>Victoria, BC</li>
 			<li>Long hot showers</li>
 			<li>Pepsi</li>
@@ -170,16 +170,17 @@
 			<li>Quentin Tarantino movies</li>
 			<li>Three Idiots</li>
 			<li>Mythic Quest</li>
-			<li>Grilled Squid at Richmond Night Market</li>
-			<li>Grilled Mackarel</li>
+			<li>Grilled squid at Richmond Night Market</li>
+			<li>Grilled mackarel</li>
 			<li>Kare-Kare</li>
 			<li>Cervelo bikes</li>
 			<li>Mizuno golf irons</li>
 			<li>Car camping</li>
-			<li>Prime Rib and Ribeye Steaks</li>
+			<li>Prime rib and ribeye Steaks</li>
 			<li>The Keg Billy Miner Pie</li>
-			<li>Negitoro Cones</li>
+			<li>Negitoro cones</li>
 			<li>Shohei Ohtani</li>
+			<li>Barcelo's Chicken</li>
 			<li>Chipotle</li>
 			<li>Chinatown BBQ</li>
 		</ul>
