--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<h1>Hello.</h1>
 		<p>I'm Steve Quilala, a front-end web developer based in Vancouver. </p>
 		<p>MBA graduate. Apple fanboy. Creative/technical unicorn. StarCraft II Diamond league Zerg. Cat person.</p>
-		<p><a href="https://stevequilala.wordpress.com">stevequilala.wordpress.com</a></p>
+		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</section>
 		<section class="loves">
 		<h2>What I love...</h2>
@@ -104,6 +104,7 @@
 			<li>30 Rock</li>
 			<li>Community</li>
 			<li>Brooklyn 99</li>
+			<li>Mac minis</li>
 			<li>The 12-inch MacBook</li>
 			<li>The cylinder Mac Pro</li>
 			<li>The desk lamp iMac</li>
@@ -116,8 +117,8 @@
 			<li>Snow. Tons of snow.</li>
 			<li>NBA Basketball</li>
 			<li>Charles Barkley</li>
-			<li>San Francisco, California</li>
-			<li>London, England</li>			
+			<li>San Francisco</li>
+			<li>London</li>			
 			<li>Long drives</li>
 			<li>Long bike rides</li>
 			<li>Playing ball hockey outside with friends for hours</li>
