--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<body>
 		<section>
 		<h1>Hello.</h1>
-		<p>I'm Steve Quilala, a front-end web developer based in Vancouver. </p>
+		<p>I'm Steve Quilala, a front-end web developer based in Vancouver, BC. </p>
 		<p>MBA graduate. Apple fanboy. Creative/technical unicorn. StarCraft II Diamond league Zerg. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</section>
@@ -156,6 +156,7 @@
 			<li>Pepsi</li>
 			<li>Jeep Renegades</li>
 			<li>Mazda Miatas</li>
+			<li>Pitch and Putt</li>
 			<li>Brene Brown</li>
 			<li>MEC</li>
 			<li>NASA and space research</li>			
@@ -175,7 +176,7 @@
 			<li>Grilled mackarel</li>
 			<li>Kare-Kare</li>
 			<li>Cervelo bikes</li>
-			<li>Mizuno golf irons</li>
+			<li>Mizuno golf clubs</li>
 			<li>Car camping</li>
 			<li>Prime rib and ribeye Steaks</li>
 			<li>The Keg Billy Miner Pie</li>
