--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 			<li>Well thought-out, creative branding</li>
 			<li>Complex people who are super misunderstood, but are actually really good inside</li>
 			<li>Apple stuff</li>
-			<li>New York City</li>			<li>YouTube</li>
+			<li>New York City</li>
+			<li>YouTube</li>
 			<li>Sinigang</li>
 			<li>Sushi</li>
 			<li>Fried chicken and gravy</li>
@@ -149,6 +150,7 @@
 			<li>Watching old speeches and keynotes by Steve Jobs</li>
 			<li>Lord of the Rings</li>
 			<li>Hardwood floors</li>
+			<li>Shopping on Amazon</li>
 			<li>Shopping at IKEA</li>
 			<li>Arby's double beef and cheddars</li>
 			<li>Victoria, BC</li>
