--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 			margin-bottom: 3vw;
 			list-style-type: circle;
 			font-weight: 100;
+			padding-left: 0.5em;
+			margin-left: -0.5em;
 			}
 	
 		a {
