--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Hi. I'm Steve Quilala.</title>
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 	</head>
@@ -27,17 +31,28 @@
 			line-height: 1.4;
 			font-weight: 100;
 			}
-		
+
+		ul {
+			list-style: none;
+			margin-left: 6vw;
+		}
+			
 		li {
 			font-size: 6vw;
 			line-height: 1.3;
 			margin-bottom: 3vw;
-			list-style-type: circle;
 			font-weight: 100;
-			padding-left: 0.5em;
-			margin-left: -0.5em;
 			}
-	
+
+		li::before{
+			content: "\0122";
+			font-style: normal;
+			font-weight: 100; 
+			padding-right: 3vw;
+			margin-left: -6.5vw;
+			color: rgba(255, 255, 255, 0.6); 
+			}
+
 		a {
 			color: #ffffff;
 			text-decoration: none;
