--- a/index.html
+++ b/index.html
@@ -8,49 +8,47 @@
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 	</head>
 	<style>
-		body {
+		:root {
 			font-family: 'IBM Plex Sans', sans-serif;
 			background-color: rgb(10, 90, 98);
 			color: #ffffff;
 			font-style: italic;
+			font-weight: 100; 
 			}
 		
 		h1 {
 			font-size: 25vw;
 			margin-bottom: 2vw;
-			font-weight: 100;
+			font-weight: 100; 
 			}	
 		
 		h2 {
 			font-size: 7vw;
-			font-weight: 100;
+			font-weight: 100; 
 			}
 	
 		p {
 			font-size: 6vw;
 			line-height: 1.4;
-			font-weight: 100;
 			}
 
 		ul {
 			list-style: none;
-			margin-left: 6vw;
+			margin-left: 4vw;
 		}
 			
 		li {
 			font-size: 6vw;
-			line-height: 1.3;
-			margin-bottom: 3vw;
-			font-weight: 100;
+			line-height: 1.25;
+			margin-bottom: 4vw;
 			}
 
 		li::before{
-			content: "\0122";
+			content: ">";
 			font-style: normal;
-			font-weight: 100; 
-			padding-right: 3vw;
-			margin-left: -6.5vw;
-			color: rgba(255, 255, 255, 0.6); 
+			padding-right: 0.5em;
+			margin-left: -1em;
+			color: rgba(255, 255, 255, 0.5); 
 			}
 
 		a {
