--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			color: #ffffff;
 			font-style: italic;
 			font-weight: 100; 
+			margin: 2vw 5vw 2vw 5vw;
 			}
 		
 		h1 {
@@ -58,9 +59,8 @@
 			padding-bottom: .5vw;
 			}				
 	
-		section{
+		section.intro{
 			padding: 1vw 0;
-			margin: 2vw 5vw 2vw 5vw;
 			}
 	
 		section.loves{
@@ -69,7 +69,7 @@
 			}
 	</style>
 	<body>
-		<section>
+		<section class="intro">
 		<h1>Hello.</h1>
 		<p>I'm Steve Quilala, a front-end web developer based in Vancouver, BC. </p>
 		<p>MBA graduate. Apple fanboy. Creative/technical unicorn. StarCraft II Diamond league Zerg. Cat person.</p>
