--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<script src="https://kit.fontawesome.com/63d93b4b7d.js" crossorigin="anonymous"></script>
 		<title>Hi. I'm Steve Quilala.</title>
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 	</head>
@@ -12,7 +13,6 @@
 			font-family: 'IBM Plex Sans', sans-serif;
 			background-color: rgb(10, 90, 98);
 			color: #ffffff;
-			font-style: italic;
 			font-weight: 100; 
 			margin: 2vw 5vw 10vw 5vw;
 			}
@@ -24,8 +24,8 @@
 			}	
 		
 		h2 {
-			font-size: 7vw;
-			font-weight: 100; 
+			font-size: 6vw;
+			font-weight: 400; 
 			}
 	
 		p {
@@ -34,8 +34,7 @@
 			}
 
 		ul {
-			list-style: none;
-			margin-left: 4vw;
+			list-style: circle;
 		}
 			
 		li {
@@ -44,18 +43,10 @@
 			margin-bottom: 4vw;
 			}
 
-		li::before{
-			content: ">";
-			font-style: normal;
-			padding-right: 0.5em;
-			margin-left: -1em;
-			color: rgba(255, 255, 255, 0.5); 
-			}
-
 		a {
 			color: #ffffff;
 			text-decoration: none;
-			border-bottom: 3px dotted #fff;
+			border-bottom: 2px dotted #fff;
 			padding-bottom: .5vw;
 			}				
 	
