--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<style>
 		:root {
 			font-family: 'IBM Plex Sans', sans-serif;
-			background-color: rgb(10, 90, 98);
+			background-color: #2e7897;
 			color: #ffffff;
 			font-weight: 100; 
 			margin: 2vw 5vw 10vw 5vw;
