Update CSS location

--- a/index.html
+++ b/index.html
@@ -75,13 +75,16 @@
 			<li>Making new things</li>
 			<li>Improving and refining existing things</li>
 			<li>Learning new things</li>
+			<li>Purposeful, well-designed things in general</li>
 			<li>Appreciating the hard work, talent, skill, and dedication of other humans</li>
 			<li>Education, teaching, and learning</li>
-			<li>Super smart people who are also super kind and loving</li>
+			<li>Super smart people who are also super kind and caring</li>
 			<li>Great teamwork when everyone is in-sync and working together as one</li>
 			<li>Honesty</li>
 			<li>Transparency</li>
+			<li>Water</li>
 			<li>Doing work that's fun and rewarding</li>
+			<li>People who are passionate and dedicated to their craft</li>
 			<li>Good friends and family</li>
 			<li>Unselfish, virtuous, generous, good people</li>
 			<li>Well thought-out, creative branding</li>
@@ -93,14 +96,16 @@
 			<li>Sushi</li>
 			<li>Fried chicken and gravy</li>
 			<li>Uni sashimi</li>
-			<li>Pizza</li>
+			<li>Pizza Hut pan pizzas</li>
+			<li>Learning through in-person lectures</li>
 			<li>Pho</li>
-			<li>Soft, medium length cardigans preferably with pockets</li>
+			<li>Vancouver</li>
+			<li>Victoria</li>
+			<li>Soft, medium length cardigans with pockets</li>
 			<li>Perfect sunny side up fried eggs</li>
 			<li>Hot wings</li>
 			<li>Researching companies and investing in them</li>
 			<li>Learning about laws and legal precedents</li>
-			<li>Purposeful, well-designed things in general</li>
 			<li>Okanagan weather</li>
 			<li>Muhammad Ali</li>
 			<li>Steve Jobs</li>
@@ -144,6 +149,7 @@
 			<li>StarCraft II</li>
 			<li>Massive baneling connections against Terran marines in SC2</li>
 			<li>Baseball caps</li>
+			<li>Ribeye steaks</li>
 			<li>Hanging out at shopping malls</li>
 			<li>Hard-working, gritty, grinder types of players in any sport</li>
 			<li>WordPress</li>			
@@ -162,7 +168,6 @@
 			<li>Shopping on Amazon</li>
 			<li>Shopping at IKEA</li>
 			<li>Arby's double beef and cheddars</li>
-			<li>Victoria, BC</li>
 			<li>Long hot showers</li>
 			<li>Pepsi</li>
 			<li>Jeep Renegades</li>
@@ -189,7 +194,7 @@
 			<li>Cervelo bikes</li>
 			<li>Mizuno golf clubs</li>
 			<li>Car camping</li>
-			<li>Prime rib and ribeye Steaks</li>
+			<li>The Keg Prime Rib</li>
 			<li>The Keg Billy Miner Pie</li>
 			<li>Negitoro cones</li>
 			<li>Shohei Ohtani</li>
