--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 			<li>Nike Free Run shoes</li>
 			<li>Black skinny jeans</li>
 			<li>Good quality leather</li>
+			<li>Birkenstocks</li>
 			<li>Watching old speeches and keynotes by Steve Jobs</li>
 			<li>Lord of the Rings</li>
 			<li>Hardwood floors</li>
@@ -170,8 +171,6 @@
 			<li>Arby's double beef and cheddars</li>
 			<li>Long hot showers</li>
 			<li>Pepsi</li>
-			<li>Jeep Renegades</li>
-			<li>Mazda Miatas</li>
 			<li>Pitch and Putt</li>
 			<li>Brene Brown</li>
 			<li>MEC</li>
