--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 	<body>
 		<section class="intro">
 		<h1>Hello.</h1>
-		<p>I'm Steve Quilala, a front-end web developer based in Vancouver, BC, Canada. </p>
-		<p>MBA Graduate. UBC Alumni. Creative/technical unicorn. Apple fanboy. Cyclist. StarCraft II Diamond league Zerg. Cat person.</p>
+		<p>I'm Steve Quilala, a front-end web developer based in Vancouver. </p>
+		<p>Creative/technical unicorn. MBA Graduate. UBC Alumni. Apple fanboy. Cyclist. StarCraft II Diamond league Zerg. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</section>
 		<section class="loves">
