--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 			<li>Pepsi</li>
 			<li>Pitch and Putt</li>
 			<li>Brene Brown</li>
-			<li>MEC</li>
+			<li>Mountain Equipment Co-op</li>
 			<li>NASA and space research</li>			
 			<li>Fairdale road bikes</li>
 			<li>Reading/watching Bloomberg news</li>
