--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 			<li>Making new things</li>
 			<li>Improving and refining existing things</li>
 			<li>Learning new things</li>
-			<li>Purposeful, well-designed things in general</li>
+			<li>Purposeful, well-designed things</li>
 			<li>Appreciating the hard work, talent, skill, and dedication of other humans</li>
 			<li>Education, teaching, and learning</li>
-			<li>Super smart people who are also super kind and caring</li>
+			<li>Super smart people who are also kind and caring</li>
 			<li>Great teamwork when everyone is in-sync and working together as one</li>
 			<li>Honesty</li>
 			<li>Transparency</li>
