--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
 			<li>Cervelo bikes</li>
 			<li>Mizuno golf clubs</li>
 			<li>Car camping</li>
+			<li>Ultralight fishing</li>
 			<li>The Keg Prime Rib</li>
 			<li>The Keg Billy Miner Pie</li>
 			<li>Negitoro cones</li>
