--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<section class="intro">
 		<h1>Hello.</h1>
 		<p>I'm Steve Quilala, a front-end web developer based in Vancouver. </p>
-		<p>Creative/technical unicorn. MBA Graduate. UBC Alumni. Apple fanboy. INTP. StarCraft II Diamond league Zerg. Cat person.</p>
+		<p>Creative/technical unicorn. INTP. MBA Graduate. UBC Alumni. Apple fanboy. StarCraft II Diamond league Zerg. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</section>
 		<section class="loves">
