--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 			}	
 		
 		h2 {
-			font-size: 6vw;
+			font-size: 5vw;
 			font-weight: 100; 
 			}
 	
 		p {
-			font-size: 5vw;
+			font-size: 4vw;
 			line-height: 1.4;
 			}
 
@@ -39,7 +39,7 @@
 		}
 			
 		li {
-			font-size: 4vw;
+			font-size: 3.5vw;
 			line-height: 1.25;
 			margin-bottom: 2vw;
 			}
@@ -65,7 +65,7 @@
 	<body>
 		<section class="intro">
 		<h1>Hello.</h1>
-		<p>I'm Steve Quilala, a front-end web developer based in Vancouver. </p>
+		<p>I'm Steve Quilala, a front-end web developer based in Vancouver, BC. </p>
 		<p>Creative/technical unicorn. INTP. MBA Graduate. UBC Alumni. Apple fanboy. StarCraft II Diamond league Zerg. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</section>
