--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	<body>
 		<section class="intro">
 		<h1>Hello.</h1>
-		<p>I'm Steve Quilala, a front-end web developer based in Vancouver, BC. </p>
+		<p>I'm Steve Quilala, a front-end web developer from Vancouver, BC, Canada. </p>
 		<p>Creative/technical unicorn. INTP. MBA Graduate. UBC Alumni. Apple fanboy. StarCraft II Diamond league Zerg. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</section>
