--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<style>
 		:root {
 			font-family: 'IBM Plex Sans', sans-serif;
-			background-color: #123341;
+			background-color: #19508a;
 			color: #ffffff;
 			font-weight: 100; 
 			margin: 2vw 6vw 10vw 6vw;
