--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 			background-color: #19508a;
 			color: #ffffff;
 			font-weight: 100; 
-			margin: 2vw 7vw 10vw 7vw;
+			margin: 0vw 7vw 10vw 7vw;
 			}
 		
 		h1 {
-			font-size: 20vw;
+			font-size: 25vw;
 			margin-bottom: 2vw;
 			font-weight: 100; 
 			}	
@@ -48,14 +48,10 @@
 			color: #ffffff;
 			text-decoration: none;
 			border-bottom: 2px dotted #fff;
-			padding-bottom: .5vw;
 			}				
 	
-		section.intro{
-			padding: 1vw 0;
-			}
-	
-		section.loves{
+		section.loves {
+			margin-top: 2vw;
 			padding: 0vw 5vw 5vw 5vw; 
 			border: 1px solid rgba(255, 255, 255, 0.3);
 			}
