--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<section class="intro">
 		<h1>Hello.</h1>
 		<p>I'm Steve Quilala, a front-end web developer from Vancouver, BC, Canada. </p>
-		<p>Creative/technical unicorn. INTP. MBA Graduate. UBC Alumni. StarCraft II Diamond league Zerg. Apple fanboy. Cat person.</p>
+		<p>Creative/technical unicorn. MBA Grad. UBC Alumni. StarCraft II Diamond league Zerg. Apple fanboy. INTP. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</section>
 		<section class="loves">
