--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<body>
 		<section class="intro">
 		<h1>Hello.</h1>
-		<p>I'm Steve Quilala, a front-end web developer from Vancouver, BC, Canada. </p>
+		<p>I'm Steve Quilala, a front-end web developer from Vancouver, Canada. </p>
 		<p>Creative/technical unicorn. MBA. INTP. Cyclist. UBC Alumni. StarCraft II Diamond league Zerg. Apple fanboy. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</section>
