--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<style>
 		:root {
 			font-family: 'IBM Plex Sans', sans-serif;
-			background-color: #19508a;
+			background-color: #53B0AE;
 			color: #ffffff;
 			font-weight: 100; 
 			margin: 0vw 7vw 10vw 7vw;
