--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<style>
 		:root {
 			font-family: 'IBM Plex Sans', sans-serif;
-			background-color: #53B0AE;
-			color: #ffffff;
+			background-color: rgb(83,176,174);
+			color: rgb(48,48,48);
 			font-weight: 100; 
 			margin: 0vw 7vw 10vw 7vw;
 			}
