--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	<style>
 		:root {
 			font-family: 'IBM Plex Sans', sans-serif;
-			background-color: rgb(83,176,174);
-			color: rgb(48,48,48);
-			font-weight: 200; 
+			background-color: #0F4C81;
+			color: #fff;
+			font-weight: 100; 
 			margin: 0vw 7vw 10vw 7vw;
 			}
 		
