--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		
 		h2 {
 			font-size: 6vw;
+			font-weight: 100;
 			}
 	
 		p {
@@ -46,6 +47,7 @@
 
 		a {
 			text-decoration: none;
+			color: #fff;
 			border-bottom: 2px dotted #fff;
 			}				
 	
