--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<section class="intro">
 		<h1>Hello.</h1>
 		<p>I'm Steve Quilala, a front-end web developer from Vancouver, Canada. </p>
-		<p>Creative + technical unicorn. MBA graduate. UBC alumni. StarCraft II diamond league Zerg. Apple fanboy. INTP. Cat person.</p>
+		<p>Creative + technical unicorn. MBA graduate. UBC alumni. StarCraft II diamond league Zerg. INTP. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</section>
 		<section class="loves">
