--- a/index.html
+++ b/index.html
@@ -198,6 +198,8 @@
 			<li>Barcelo's Chicken</li>
 			<li>Chipotle</li>
 			<li>Chinatown BBQ</li>
+			<li>AirTags</li>
+			<li>Tortang talong</li>
 		</ul>
 		</section>
 	</body>
