--- a/index.html
+++ b/index.html
@@ -200,6 +200,8 @@
 			<li>Chinatown BBQ</li>
 			<li>AirTags</li>
 			<li>Tortang talong</li>
+			<li>Museums</li>
+			<li>Funko Pops</li>
 		</ul>
 		</section>
 	</body>
