--- a/index.html
+++ b/index.html
@@ -6,33 +6,36 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<script src="https://kit.fontawesome.com/63d93b4b7d.js" crossorigin="anonymous"></script>
 		<title>Hi. I'm Steve Quilala.</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 	<style>
-		:root {
+		body {
 			font-family: 'IBM Plex Sans', sans-serif;
-			background-color: #0F4C81;
+			background-color: #205f6f;
 			color: #fff;
 			font-weight: 100; 
-			margin: 0vw 7vw 10vw 7vw;
+			margin: 10vw 7vw 10vw 7vw;
 			}
 		
 		h1 {
-			font-size: 28vw;
+			font-size: 25vw;
 			margin-bottom: 2vw;
 			font-weight: 100; 
 			margin-left: -2vw;
 			}	
 		
 		h2 {
-			font-size: 6vw;
+			font-size: 5vw;
 			font-weight: 100;
+			margin-bottom: 2vw;
 			}
 	
 		p {
-			font-size: 5.5vw;
+			font-size: 4vw;
 			line-height: 1.4;
+			margin-bottom: 2vw;
 			}
 
 		ul {
@@ -40,9 +43,10 @@
 		}
 			
 		li {
-			font-size: 5vw;
+			font-size: 3.5vw;
 			line-height: 1.4;
 			margin-bottom: 2vw;
+			margin-left: 2vw;
 			}
 
 		a {
@@ -52,8 +56,8 @@
 			}				
 	
 		section.loves {
-			margin-top: 2vw;
-			padding: 0vw 5vw 5vw 5vw; 
+			margin-top: 10vw;
+			padding: 5vw; 
 			border: 1px solid rgba(255, 255, 255, 0.131);
 			}
 	</style>	
@@ -204,5 +208,6 @@
 			<li>Funko Pops</li>
 		</ul>
 		</section>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	</body>
 </html>
