--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<style>
 		body {
 			font-family: 'IBM Plex Sans', sans-serif;
-			background-color: #205f6f;
+			background-color: #12547e;
 			color: #fff;
 			font-weight: 100; 
 			margin: 10vw 7vw 10vw 7vw;
