--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 			<li>Great teamwork when everyone is in-sync and working together as one</li>
 			<li>Honesty</li>
 			<li>Transparency</li>
+			<li>Authentic, trustworthy, and courageous leadership</li>
 			<li>Doing work that's fun and rewarding</li>
 			<li>People who are passionate and dedicated to their craft</li>
 			<li>Good friends and family</li>
