--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 			<li>The cylinder Mac Pro</li>
 			<li>The desk lamp iMac</li>
 			<li>Dyson Vacuums</li>
+			<li>Playing ball hockey with friends</li>
 			<li>Podcasts</li>
 			<li>Oprah Supersoul Conversations</li>
 			<li>Documentaries</li>
@@ -149,7 +150,6 @@
 			<li>M.I.A.</li>
 			<li>Cardi B</li>
 			<li>StarCraft II</li>
-			<li>Massive baneling connections against Terran marines in SC2</li>
 			<li>Baseball caps</li>
 			<li>Ribeye steaks</li>
 			<li>Hanging out at shopping malls</li>
@@ -173,7 +173,7 @@
 			<li>Arby's double beef and cheddars</li>
 			<li>Long hot showers</li>
 			<li>Pepsi</li>
-			<li>Pitch and Putt</li>
+			<li>A day of pitch and putt</li>
 			<li>Brene Brown</li>
 			<li>Mountain Equipment Co-op</li>
 			<li>NASA and space research</li>			
@@ -189,6 +189,7 @@
 			<li>Quentin Tarantino movies</li>
 			<li>Three Idiots</li>
 			<li>Mythic Quest</li>
+			<li>Watching Terran vs Zerg replays</li>
 			<li>Grilled squid at Richmond Night Market</li>
 			<li>Grilled mackarel</li>
 			<li>Kare-Kare</li>
