--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<li>Unselfish, virtuous, generous, good people</li>
 			<li>Well thought-out, creative branding</li>
 			<li>Complex people who are super misunderstood, but are actually really good inside</li>
-			<li>Apple stuff</li>
+			<li>Apple products</li>
 			<li>New York City</li>
 			<li>YouTube</li>
 			<li>Sinigang</li>
@@ -107,7 +107,6 @@
 			<li>Hot wings</li>
 			<li>Researching companies and investing in them</li>
 			<li>Learning about laws and legal precedents</li>
-			<li>Okanagan weather</li>
 			<li>Muhammad Ali</li>
 			<li>Steve Jobs</li>
 			<li>CSS</li>
@@ -125,7 +124,7 @@
 			<li>The 12-inch MacBook</li>
 			<li>The cylinder Mac Pro</li>
 			<li>The desk lamp iMac</li>
-			<li>Dyson Vacuums</li>
+			<li>Dyson products</li>
 			<li>Playing ball hockey with friends</li>
 			<li>Podcasts</li>
 			<li>Oprah Supersoul Conversations</li>
@@ -141,6 +140,9 @@
 			<li>Long bike rides</li>
 			<li>Playing ball hockey outside with friends for hours</li>
 			<li>The feeling of a one-timer slap shot and going post in</li>
+			<li>Nike</li>
+			<li>Patagonia</li>
+			<li>North Face</li>
 			<li>Lululemon</li>
 			<li>Tupac Shakur</li>
 			<li>Earth, Wind, and Fire</li>
@@ -153,6 +155,7 @@
 			<li>Baseball caps</li>
 			<li>Ribeye steaks</li>
 			<li>Hanging out at shopping malls</li>
+			<li>Okanagan weather</li>
 			<li>Hard-working, gritty, grinder types of players in any sport</li>
 			<li>WordPress</li>			
 			<li>Kittens</li>			
@@ -161,7 +164,6 @@
 			<li>SPAM</li>
 			<li>Wild 'N Out</li>
 			<li>Jollibee</li>
-			<li>Nike Free Run shoes</li>
 			<li>Black skinny jeans</li>
 			<li>Good quality leather</li>
 			<li>Birkenstocks</li>
@@ -189,11 +191,12 @@
 			<li>Quentin Tarantino movies</li>
 			<li>Three Idiots</li>
 			<li>Mythic Quest</li>
-			<li>Watching Terran vs Zerg replays</li>
+			<li>Chocolate covered almonds</li>
+			<li>Watching pro-level Terran vs Zerg replays on YouTube</li>
 			<li>Grilled squid at Richmond Night Market</li>
 			<li>Grilled mackarel</li>
 			<li>Kare-Kare</li>
-			<li>Cervelo bikes</li>
+			<li>Cervélo bikes</li>
 			<li>Mizuno golf clubs</li>
 			<li>Car camping</li>
 			<li>Ultralight fishing</li>
@@ -204,9 +207,10 @@
 			<li>Barcelo's Chicken</li>
 			<li>Chipotle</li>
 			<li>Chinatown BBQ</li>
+			<li>Ask for Luigi</li>
 			<li>AirTags</li>
 			<li>Tortang talong</li>
-			<li>Museums</li>
+			<li>Visiting museums</li>
 			<li>Funko Pops</li>
 		</ul>
 		</section>
