Adjust link border

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 			a {
 				text-decoration: none;
 				color: #fff;
-				border-bottom: 2px dotted #fff;
+				border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 				}				
 		
 			section.loves {
 				margin-top: 10vw;
 				padding: 5vw; 
-				border: 1px solid rgba(255, 255, 255, 0.131);
+				border: 1px solid rgba(255, 255, 255, 0.2);
 				}
 		</style>	
 	</head>
