--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				background-color: #12547e;
 				color: #fff;
 				font-weight: 100; 
-				margin: 10vw 8vw 10vw 8vw;
+				margin: 9vw;
 				font-style: italic;
 				}
 			
@@ -24,7 +24,7 @@
 				font-size: 25vw;
 				margin-bottom: 2vw;
 				font-weight: 100; 
-				margin-left: -2vw;
+				margin-left: -1vw;
 				}	
 			
 			h2 {
