--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 			<li>Pho</li>
 			<li>Vancouver</li>
 			<li>Victoria</li>
+			<li>Tofino</li>
 			<li>Soft, medium length cardigans with pockets</li>
 			<li>Perfect sunny side up fried eggs</li>
 			<li>Hot wings</li>
