--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<li>Making new things</li>
 			<li>Improving and refining existing things</li>
 			<li>Learning new things</li>
-			<li>Purposeful, well-designed things</li>
+			<li>Purposeful, well-designed objects</li>
 			<li>Appreciating the hard work, talent, skill, and dedication of other humans</li>
 			<li>Education, teaching, and learning</li>
 			<li>Super smart people who are also kind and caring</li>
@@ -139,6 +139,7 @@
 			<li>San Francisco</li>
 			<li>London</li>			
 			<li>Long drives</li>
+			<li>Costco</li>
 			<li>Long bike rides</li>
 			<li>Playing ball hockey outside with friends for hours</li>
 			<li>The feeling of a one-timer slap shot and going post in</li>
@@ -199,7 +200,7 @@
 			<li>Grilled mackarel</li>
 			<li>Kare-Kare</li>
 			<li>Cervélo bikes</li>
-			<li>Mizuno golf clubs</li>
+			<li>Mizuno irons</li>
 			<li>Car camping</li>
 			<li>Ultralight fishing</li>
 			<li>The Keg Prime Rib</li>
@@ -214,6 +215,7 @@
 			<li>Tortang talong</li>
 			<li>Visiting museums</li>
 			<li>Funko Pops</li>
+			<li>Open Core Legacy Patcher</li>
 		</ul>
 		</section>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
