--- a/index.html
+++ b/index.html
@@ -67,23 +67,23 @@
 	<body>
 		<section class="intro">
 		<h1>Hello.</h1>
-		<p>I'm Steve Quilala, a front-end web developer from Vancouver, Canada. </p>
-		<p>Creative + technical unicorn. MBA graduate. UBC alumni. StarCraft II diamond league Zerg. INTP. Cat person.</p>
+		<p>I'm Steve Quilala, a web designer from Vancouver, BC, Canada. </p>
+		<p>Creative + technical unicorn. UBC alumni. MBA graduate. Cyclist. StarCraft II diamond league Zerg. INTP. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</section>
 		<section class="loves">
-		<h2>What I love...</h2>
+		<h2>Some of my favourite things in life are...</h2>
 		<ul>
 			<li>Making new things</li>
-			<li>Improving and refining existing things</li>
-			<li>Learning new things</li>
+			<li>Learning new topics and industries</li>
 			<li>Purposeful, well-designed objects</li>
-			<li>Appreciating the hard work, talent, skill, and dedication of other humans</li>
-			<li>Education, teaching, and learning</li>
-			<li>Super smart people who are also kind and caring</li>
+			<li>Smart people who are also kind and caring</li>
 			<li>Great teamwork when everyone is in-sync and working together as one</li>
+			<li>Cats</li>
+			<li>Appreciating the hard work, talent, skill, and dedication of other humans</li>
 			<li>Honesty</li>
 			<li>Transparency</li>
+			<li>Improving and refining existing things</li>
 			<li>Authentic, trustworthy, and courageous leadership</li>
 			<li>Doing work that's fun and rewarding</li>
 			<li>People who are passionate and dedicated to their craft</li>
@@ -99,18 +99,20 @@
 			<li>Fried chicken and gravy</li>
 			<li>Uni sashimi</li>
 			<li>Pizza Hut pan pizzas</li>
+			<li>Education, teaching, and learning</li>
 			<li>Learning through in-person lectures</li>
+			<li>Soft, medium length cardigans with pockets</li>
+			<li>Learning about laws and legal precedents</li>
+			<li>Playing ball hockey with friends</li>
 			<li>Pho</li>
 			<li>Vancouver</li>
 			<li>Victoria</li>
 			<li>Tofino</li>
-			<li>Soft, medium length cardigans with pockets</li>
 			<li>Perfect sunny side up fried eggs</li>
 			<li>Hot wings</li>
-			<li>Researching companies and investing in them</li>
-			<li>Learning about laws and legal precedents</li>
 			<li>Muhammad Ali</li>
 			<li>Steve Jobs</li>
+			<li>Watching old speeches and keynotes by Steve Jobs</li>
 			<li>CSS</li>
 			<li>NewTown Bakery</li>
 			<li>Gardening</li>
@@ -126,8 +128,8 @@
 			<li>The 12-inch MacBook</li>
 			<li>The cylinder Mac Pro</li>
 			<li>The desk lamp iMac</li>
+			<li>Researching and investing in good companies</li>
 			<li>Dyson products</li>
-			<li>Playing ball hockey with friends</li>
 			<li>Podcasts</li>
 			<li>Oprah Supersoul Conversations</li>
 			<li>Documentaries</li>
@@ -157,11 +159,12 @@
 			<li>StarCraft II</li>
 			<li>Baseball caps</li>
 			<li>Ribeye steaks</li>
+			<li>Anything made from titanium</li>
 			<li>Hanging out at shopping malls</li>
 			<li>Okanagan weather</li>
 			<li>Hard-working, gritty, grinder types of players in any sport</li>
 			<li>WordPress</li>			
-			<li>Kittens</li>			
+			<li>Korean BBQ</li>
 			<li>Steel road bikes</li>			
 			<li>Airports</li>
 			<li>SPAM</li>
@@ -170,7 +173,6 @@
 			<li>Black skinny jeans</li>
 			<li>Good quality leather</li>
 			<li>Birkenstocks</li>
-			<li>Watching old speeches and keynotes by Steve Jobs</li>
 			<li>Lord of the Rings</li>
 			<li>Hardwood floors</li>
 			<li>Shopping on Amazon</li>
