Add ahrefs site verification

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<meta name="ahrefs-site-verification" content="26b78cf2070f7d79c63f999b701d187cac241393f76199ebd9244647b8a9e64b">
 		<script src="https://kit.fontawesome.com/63d93b4b7d.js" crossorigin="anonymous"></script>
 		<title>Hi. I'm Steve Quilala.</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
