--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
 			<li>Chinatown BBQ</li>
 			<li>Ask for Luigi</li>
 			<li>AirTags</li>
+			<li>Warhammer 40k lore</li>
 			<li>Tortang talong</li>
 			<li>Visiting museums</li>
 			<li>Funko Pops</li>
