--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
 	<body>
 		<section class="intro">
 		<h1>Hello.</h1>
-		<p>I'm Steve Quilala, a web designer from Vancouver, BC, Canada. </p>
+		<p>I'm Steve Quilala.</p>
 		<p>Creative + technical unicorn. UBC alumni. MBA graduate. Cyclist. StarCraft II diamond league Zerg. INTP. Cat person.</p>
+		<p>Steve works and lives in Vancouver and Nanaimo, BC on the unceded traditional territories of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations. </p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</section>
 		<section class="loves">
