--- a/index.html
+++ b/index.html
@@ -15,40 +15,36 @@
 			body {
 				font-family: 'IBM Plex Sans', sans-serif;
 				background-color: #12547e;
-				color: #fff;
-				font-weight: 100; 
+				color: rgba(255, 255, 255, 0.80);
+				font-weight: 500; 
 				margin: 9vw;
-				font-style: italic;
 				}
 			
 			h1 {
-				font-size: 25vw;
-				margin-bottom: 2vw;
-				font-weight: 100; 
-				margin-left: -1vw;
+				font-size: 8vw;
+				margin: 8vw 0;
+				font-weight: 900; 
 				}	
 			
 			h2 {
-				font-size: 5vw;
-				font-weight: 100;
+				font-size: 4vw;
 				margin-bottom: 2vw;
 				}
 		
 			p {
-				font-size: 4vw;
-				line-height: 1.4;
-				margin-bottom: 3vw;
+				font-size: 3vw;
+				line-height: 1.45;
+				margin-bottom: 4vw;
 				}
 
 			ul {
-				list-style: circle;
+				list-style: square;
 			}
 				
 			li {
-				font-size: 3.5vw;
+				font-size: 3vw;
 				line-height: 1.4;
 				margin-bottom: 2vw;
-				margin-left: 2vw;
 				}
 
 			a {
@@ -67,10 +63,9 @@
 	
 	<body>
 		<section class="intro">
-		<h1>Hello.</h1>
-		<p>I'm Steve Quilala.</p>
+		<h1>Hi. I'm Steve Quilala.</h1>
 		<p>Creative + technical unicorn. UBC alumni. MBA graduate. Cyclist. StarCraft II diamond league Zerg. INTP. Cat person.</p>
-		<p>Steve works and lives in Vancouver and Nanaimo, BC on the unceded traditional territories of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations. </p>
+		<p>I live and work in Vancouver and Nanaimo on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations. </p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</section>
 		<section class="loves">
