More style updates

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<meta name="ahrefs-site-verification" content="26b78cf2070f7d79c63f999b701d187cac241393f76199ebd9244647b8a9e64b">
 		<script src="https://kit.fontawesome.com/63d93b4b7d.js" crossorigin="anonymous"></script>
-		<title>Hi. I'm Steve Quilala.</title>
+		<title>Hello.</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
 				}
 			
 			h1 {
-				font-size: 8vw;
+				font-size: 12vw;
 				margin: 8vw 0;
 				font-weight: 900; 
 				}	
@@ -32,18 +32,19 @@
 				}
 		
 			p {
-				font-size: 3vw;
-				line-height: 1.45;
+				font-size: 3.5vw;
+				line-height: 1.5;
 				margin-bottom: 4vw;
 				}
 
 			ul {
 				list-style: square;
+				padding-left: 3vw;
 			}
 				
 			li {
 				font-size: 3vw;
-				line-height: 1.4;
+				line-height: 1.5;
 				margin-bottom: 2vw;
 				}
 
@@ -54,7 +55,7 @@
 				}				
 		
 			section.loves {
-				margin-top: 10vw;
+				margin: 10vw 0;
 				padding: 5vw; 
 				border: 1px solid rgba(255, 255, 255, 0.2);
 				}
@@ -63,13 +64,12 @@
 	
 	<body>
 		<section class="intro">
-		<h1>Hi. I'm Steve Quilala.</h1>
-		<p>Creative + technical unicorn. UBC alumni. MBA graduate. Cyclist. StarCraft II diamond league Zerg. INTP. Cat person.</p>
-		<p>I live and work in Vancouver and Nanaimo on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations. </p>
+		<h1>Hello, I'm Steve Quilala</h1>
+		<p>Award-winning designer that can code. Creative/technical unicorn. Apple fanboy. MBA graduate. UBC alumni. Vancouver Canucks fan. Cyclist. StarCraft II diamond league Zerg. INTP. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</section>
 		<section class="loves">
-		<h2>Some of my favourite things in life are...</h2>
+		<h2>What I love...</h2>
 		<ul>
 			<li>Making new things</li>
 			<li>Learning new topics and industries</li>
@@ -218,6 +218,8 @@
 			<li>Open Core Legacy Patcher</li>
 		</ul>
 		</section>
+		<p><small><em>I live and work in Vancouver and Nanaimo on the traditional, ancestral, unceded territory of the Snuneymuxw (Coast Salish), xʷməθkʷəy̓əm (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.</em></small> </p>
+
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	</body>
 </html>
