--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 
 			ul {
 				list-style: square;
-				padding-left: 3vw;
 			}
 				
 			li {
 				font-size: 3.6vw;
 				line-height: 1.5;
 				margin-bottom: 2vw;
+				margin-left: 3vw;
 				}
 
 			a {
