--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 			a {
 				text-decoration: none;
 				color: #fff;
-				border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+				border-bottom: 1px dashed rgba(255, 255, 255);
 				}				
 		
 			section.loves {
 				margin: 10vw 0;
 				padding: 5vw; 
-				border: 1px solid rgba(255, 255, 255, 0.2);
+				border: 1px solid rgba(255, 255, 255, 0.3);
 				}
 		</style>	
 	</head>
