--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 				font-size: 3.6vw;
 				line-height: 1.5;
 				margin-bottom: 2vw;
-				margin-left: 3vw;
+				margin-left: 2vw;
 				}
 
 			a {
 				text-decoration: none;
-				color: #fff;
+				color: rgba(255, 255, 255);
 				border-bottom: 1px dashed rgba(255, 255, 255);
 				}				
 		
@@ -59,6 +59,7 @@
 				padding: 5vw; 
 				border: 1px solid rgba(255, 255, 255, 0.3);
 				}
+				
 		</style>	
 	</head>
 	
