--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			a {
 				text-decoration: none;
 				color: rgba(255, 255, 255);
-				border-bottom: 1px dashed rgba(255, 255, 255);
+				border-bottom: 1px dashed rgba(255, 255, 255, 0.3);
 				}				
 		
 			section.loves {
