--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				}
 		
 			p {
-				font-size: 3.7vw;
+				font-size: 3vw;
 				line-height: 1.5;
 				margin-bottom: 4vw;
 				}
@@ -43,7 +43,7 @@
 			}
 				
 			li {
-				font-size: 3.6vw;
+				font-size: 3vw;
 				line-height: 1.5;
 				margin-bottom: 2vw;
 				margin-left: 1vw;
@@ -52,13 +52,13 @@
 			a {
 				text-decoration: none;
 				color: rgba(255, 255, 255);
-				border-bottom: 1px dashed rgba(255, 255, 255, 0.3);
+				border-bottom: 1px solid rgba(255, 255, 255, 0.4);
 				}				
 		
 			section.loves {
 				margin: 10vw 0;
 				padding: 5vw; 
-				border: 1px solid rgba(255, 255, 255, 0.3);
+				border: 1px solid rgba(255, 255, 255, 0.1);
 				}
 				
 		</style>	
@@ -67,7 +67,7 @@
 	<body>
 		<section class="intro">
 		<h1>Hello, I'm Steve Quilala</h1>
-		<p>Award-winning designer that can code. Creative/technical unicorn. Apple fanboy. MBA graduate. UBC alumni. Vancouver Canucks fan. Cyclist. StarCraft II diamond league Zerg. INTP. Cat person.</p>
+		<p>Award-winning designer that can code. Creative and technical unicorn. MBA graduate. UBC alumni. Cyclist. Canucks fan. Apple sheep. StarCraft II diamond league Zerg. INTP. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</section>
 		<section class="loves">
