--- a/index.html
+++ b/index.html
@@ -22,20 +22,19 @@
 				}
 			
 			h1 {
-				font-size: 12vw;
-				margin: 9vw 0;
+				font-size: 10em;
 				font-weight: 900; 
 				}	
 			
 			h2 {
-				font-size: 4vw;
-				margin-bottom: 2vw;
+				font-size: 8em;
+				margin-bottom: 2em;
 				}
 		
 			p {
-				font-size: 2.75vw;
+				font-size: 2em;
 				line-height: 1.5;
-				margin-bottom: 4vw;
+				margin-bottom: 1em;
 				}
 
 			ul {
@@ -43,10 +42,10 @@
 			}
 				
 			li {
-				font-size: 2.75vw;
+				font-size: 2em;
 				line-height: 1.5;
-				margin-bottom: 2vw;
-				margin-left: 1vw;
+				margin-bottom: 1em;
+				margin-left: 1em;
 				}
 
 			a {
@@ -56,8 +55,8 @@
 				}				
 		
 			section.loves {
-				margin: 10vw 0;
-				padding: 5vw; 
+				margin: 2em 0;
+				padding: 3em; 
 				border: 1px solid rgba(255, 255, 255, 0.1);
 				}
 				
