--- a/index.html
+++ b/index.html
@@ -51,8 +51,6 @@
 				}				
 		
 			section.loves {
-				margin: 1em 0;
-				padding: 1em; 
 				border: 1px solid rgba(255, 255, 255, 0.1);
 				}
 				
@@ -65,7 +63,7 @@
 		<p>Award-winning designer that can code. Creative and technical unicorn. MBA graduate. UBC alumni. Canucks fan. Apple sheep. Cyclist. StarCraft II diamond league Zerg. INTP. Cat person.</p>
 		<p><a href="https://stevequilala.wordpress.com" target="_blank">stevequilala.wordpress.com</a></p>
 		</section>
-		<section class="loves">
+		<section class="loves p-2 m-2">
 		<h2>What I love...</h2>
 		<ul>
 			<li>Making new things</li>
