--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 				}	
 			
 			h2 {
-				margin-bottom: 2em;
+				font-weight: 700;
 				}
 		
 			p {
 				line-height: 1.5;
-				margin-bottom: 1em;
+				margin-bottom:1.5em;
 				}
 
 			ul {
@@ -40,8 +40,6 @@
 				
 			li {
 				line-height: 1.5;
-				margin-bottom: 1em;
-				margin-left: 1em;
 				}
 
 			a {
